Servidor Base de Datos/[Compi2]Proyecto1_201213587/src/Analisis/XML/Paquetes/paquetesGrammar.java
/* paquetesGrammar.java */
/* Generated By:JavaCC: Do not edit this line. paquetesGrammar.java */
package Analisis.XML.Paquetes;

import Funciones.XML.*;
import Static.*;
import java.util.ArrayList;

public class paquetesGrammar implements paquetesGrammarConstants {
  public static void main(String args[]) throws ParseException {
    paquetesGrammar parser = new paquetesGrammar(System.in);
    parser.S();
  }

  final public Paquete S() throws ParseException {Paquete p;
    jj_consume_token(COR_A);
    p = PAQUETE();
    jj_consume_token(COR_C);
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Paquete PAQUETE() throws ParseException {Paquete p;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_PAQUETE:{
      jj_consume_token(T_PAQUETE);
      jj_consume_token(DPTOS);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_FIN:{
        p = FIN();
        break;
        }
      case T_INSTRUCCION:{
        p = INSTRUCCION();
        break;
        }
      case T_REPORTE:{
        p = REPORTE();
        break;
        }
      case T_BACUP:{
        p = BACUP();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case T_USUARIO:{
      p = SESION();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
  }

  final public Paquete BACUP() throws ParseException {Token t;
    t = jj_consume_token(T_BACUP);
{if ("" != null) return new Paquete("bacup");}
    throw new Error("Missing return statement in function");
  }

  final public Paquete SESION() throws ParseException {Token t,t2;
    jj_consume_token(T_USUARIO);
    jj_consume_token(DPTOS);
    t = jj_consume_token(CADENA);
    jj_consume_token(T_PASSWORD);
    jj_consume_token(DPTOS);
    t2 = jj_consume_token(CADENA);
{if ("" != null) return new Paquete("sesion", t.image.substring(1, t.image.length() - 1), t2.image.substring(1, t2.image.length() - 1));}
    throw new Error("Missing return statement in function");
  }

  final public Paquete FIN() throws ParseException {
    jj_consume_token(T_FIN);
{if ("" != null) return new Paquete("fin");}
    throw new Error("Missing return statement in function");
  }

  final public Paquete INSTRUCCION() throws ParseException {Token t;
    jj_consume_token(T_INSTRUCCION);
    jj_consume_token(T_INSTRUCCION);
    jj_consume_token(DPTOS);
    t = jj_consume_token(SRC);
{if ("" != null) return new Paquete("usql", t.image.substring(1, t.image.length() - 1));}
    throw new Error("Missing return statement in function");
  }

  final public Paquete REPORTE() throws ParseException {Token t;
    jj_consume_token(T_REPORTE);
    jj_consume_token(T_INSTRUCCION);
    jj_consume_token(DPTOS);
    t = jj_consume_token(SRC);
{if ("" != null) return new Paquete("reporte", t.image.substring(1, t.image.length() - 1));}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public paquetesGrammarTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[2];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x864,0x102,};
   }

  /** Constructor with InputStream. */
  public paquetesGrammar(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public paquetesGrammar(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new paquetesGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public paquetesGrammar(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new paquetesGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public paquetesGrammar(paquetesGrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(paquetesGrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[21];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 2; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 21; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
